enable dns_v4_first

--- a/squid/artifacts/squid.conf
+++ b/squid/artifacts/squid.conf
@@ -65,7 +65,8 @@ http_access allow allowed_http_sites
 http_access deny all
 
 # Squid normally listens to port 3128
-http_port 3128 ssl-bump cert=/etc/squid/cert.pem
+http_port 3128 cert=/etc/squid/cert.pem
+dns_v4_first on
 acl allowed_https_sites ssl::server_name "/etc/squid/squid.allowed.sites.txt"
 acl step1 at_step SslBump1
 acl step2 at_step SslBump2
