rearrange squid rules

--- a/squid/artifacts/squid.conf
+++ b/squid/artifacts/squid.conf
@@ -51,22 +51,15 @@ http_access deny manager
 auth_param basic program /usr/lib64/squid/basic_ncsa_auth /etc/squid/htpasswd
 auth_param basic realm proxy
 acl authenticated proxy_auth REQUIRED
-http_access allow authenticated
 
 # Example rule allowing access from your local networks.
 # Adapt localnet in the ACL section to list your (internal) IP networks
 # from where browsing should be allowed
 acl allowed_http_sites dstdomain "/etc/squid/squid.allowed.sites.txt"
-http_access allow allowed_http_sites
-#http_access allow localnet
-#http_access allow localhost
-
-# And finally deny all other access to this proxy
-http_access deny all
 
 # Squid normally listens to port 3128
-http_port 3128 cert=/etc/squid/cert.pem
-dns_v4_first on
+http_port 3128 ssl-bump cert=/etc/squid/cert.pem
+#dns_v4_first on
 acl allowed_https_sites ssl::server_name "/etc/squid/squid.allowed.sites.txt"
 acl step1 at_step SslBump1
 acl step2 at_step SslBump2
@@ -75,6 +68,10 @@ ssl_bump peek step1 all
 ssl_bump peek step2 allowed_https_sites
 ssl_bump splice step3 allowed_https_sites
 ssl_bump terminate step2 all
+http_access allow allowed_http_sites authenticated
+http_access allow allowed_https_sites authenticated
+http_access deny all
+
 
 # Uncomment and adjust the following to add a disk cache directory.
 #cache_dir ufs /var/spool/squid 100 16 256
